--- a/the-crypt-html/the-crypt.css
+++ b/the-crypt-html/the-crypt.css
@@ -1,41 +1,151 @@
+/*body {*/
+/*    background-color: lightblue;*/
+/*    color: black;*/
+/*    font-size: 120%;*/
+/*    margin: 0 20px 1em;*/
+/*}*/
+
+/*h1 {*/
+/*    background-color: black;*/
+/*    color: lightyellow;*/
+/*    text-align: center;*/
+/*    font-family: fantasy;*/
+/*    text-shadow: 3px 3px 5px rgba(255, 255, 216, 0.6);*/
+/*    margin: 0 -20px;*/
+/*    padding: 0.5em 0;*/
+/*}*/
+
+/*#player, #place {*/
+/*    white-space: pre;*/
+/*    font-family: monospace;*/
+/*    float: left;*/
+/*    width: 50%;*/
+/*    box-sizing: border-box;*/
+/*    padding: 1em;*/
+/*    overflow: auto;*/
+/*}*/
+
+/*#message {*/
+/*    clear: left;*/
+/*    color: brown;*/
+/*    text-align: center;*/
+/*    margin: 1em;*/
+/*    padding: 1em;*/
+/*    border: 1px solid;*/
+/*}*/
+
+/*#controls {*/
+/*    text-align: center;*/
+/*}*/
+
+/*input {*/
+/*    text-align: center;*/
+/*    font-size: 120%;*/
+/*}*/
+
+html {
+    background: url(https://jsbin-user-assets.s3.amazonaws.com/jrlarsen/rock2.jpg);
+}
+
 body {
-    background-color: lightblue;
+    background: rgba(0, 0, 0, 0.5);
     color: black;
-    font-size: 120%;
-    margin: 0 20px 1em;
+    font-size: 140%;
+    margin:0;
+    padding: 0 20px 50%;
 }
 
 h1 {
-    background-color: black;
+    background: url(https://jsbin-user-assets.s3.amazonaws.com/jrlarsen/sand2.jpg);
     color: lightyellow;
     text-align: center;
     font-family: fantasy;
     text-shadow: 3px 3px 5px rgba(255, 255, 216, 0.6);
+    border-bottom:4px solid white;
+    box-shadow:0 5px 10px rgba(0, 0, 0, 0.5);
     margin: 0 -20px;
-    padding: 0.5em 0;
+    padding:0.5em 0;
+}
+
+#views {
+    padding: 2em 1em 1em;
 }
 
 #player, #place {
-    white-space: pre;
-    font-family: monospace;
-    float: left;
-    width: 50%;
+    background: url(https://jsbin-user-assets.s3.amazonaws.com/jrlarsen/sand2.jpg);
+    color: lightyellow;
+    display:inline-block;
+    width:40%;
+    margin-left:6%;
+    vertical-align: top;
     box-sizing: border-box;
-    padding: 1em;
+    padding:1em 0;
     overflow: auto;
+    border: 4px solid white;
+    box-shadow:0 0 15px rgba(255, 255, 240, 0.8);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+    text-align:center;
 }
 
-#message {
-    clear: left;
-    color: brown;
+#player p, #place p {
+    background: rgba(0, 0, 0, 0.4);
+    padding:1em 0;
+    margin:0 0 1em;
+}
+
+h3 {
+    background: rgba(0, 0, 0, 0.6);
+    margin: -1em -2em 0;
+    padding: 1em 2em 0.6em;
+    font-family: fantasy;
+    border-bottom: 1px solid white;
+}
+
+ol {
+    list-style: none;
+    margin:0;
+    padding:0;
+}
+
+li {
+    border: 1px solid white;
+    padding:5px;
+    margin:0.3em 1em;
+    background: rgba(0, 0, 0, 0.2)
+}
+
+.placePanel {
+    width: 40%;
+    float:left;
+    margin:0 3%;
+    padding:0 2%;
+}
+
+.placePanel h4 {
+    margin:0;
+    font-family: fantasy;
+    text-shadow: 2px 2px 0 black;
+}
+
+#messages {
+    color: lightyellow;
+    font-size:120%;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+    background: url(https://jsbin-user-assets.s3.amazonaws.com/jrlarsen/sand.jpg);
     text-align: center;
-    margin: 1em;
-    padding: 1em;
-    border: 1px solid;
+    margin:1em;
+    padding: 0;
+    border: 4px solid white;
+}
+
+#messages p {
+    background-color: rgba(0, 0, 0, 0.5);
+    margin:0;
+    padding: 0.5em 1em;
 }
 
 #controls {
-    text-align: center;
+    text-align:center;
 }
 
 input {
