fix: message css styling

--- a/the-crypt-html/the-crypt.css
+++ b/the-crypt-html/the-crypt.css
@@ -127,7 +127,7 @@ li {
     text-shadow: 2px 2px 0 black;
 }
 
-#messages {
+#message {
     color: lightyellow;
     font-size:120%;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
